syntax = "proto3";

package inference.inference;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "inference/inference/v1/contracts.proto";
import "inference/inference/v1/epoch_group_data.proto";
import "inference/inference/v1/epoch_group_validations.proto";
import "inference/inference/v1/epoch_performance_summary.proto";
import "inference/inference/v1/inference.proto";
import "inference/inference/v1/inference_timeout.proto";
import "inference/inference/v1/inference_validation_details.proto";
import "inference/inference/v1/model.proto";
import "inference/inference/v1/params.proto";
import "inference/inference/v1/partial_upgrade.proto";
import "inference/inference/v1/participant.proto";
import "inference/inference/v1/settle_amount.proto";
import "inference/inference/v1/tokenomics_data.proto";
import "inference/inference/v1/top_miner.proto";

option go_package = "github.com/productscience/inference/x/inference/types";

// GenesisState defines the inference module's genesis state.
message GenesisState {
  // params defines all the parameters of the module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
  GenesisOnlyParams genesis_only_params = 2 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
  repeated Inference inference_list = 3 [(gogoproto.nullable) = false];
  repeated Participant participant_list = 4 [(gogoproto.nullable) = false];
  repeated EpochGroupData epoch_group_data_list = 5 [(gogoproto.nullable) = false];
  repeated SettleAmount settle_amount_list = 6 [(gogoproto.nullable) = false];
  repeated EpochGroupValidations epoch_group_validations_list = 7 [(gogoproto.nullable) = false];
  TokenomicsData tokenomics_data = 8;
  repeated Model model_list = 9 [(gogoproto.nullable) = false];
  repeated TopMiner top_miner_list = 10 [(gogoproto.nullable) = false];
  repeated InferenceTimeout inference_timeout_list = 11 [(gogoproto.nullable) = false];
  repeated InferenceValidationDetails inferenceValidationDetailsList = 12 [(gogoproto.nullable) = false];
  repeated EpochPerformanceSummary epochPerformanceSummaryList = 13 [(gogoproto.nullable) = false];
  repeated PartialUpgrade partialUpgradeList = 14 [(gogoproto.nullable) = false];
  CosmWasmParams cosm_wasm_params = 15 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}
